manifests/loki/loki-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: loki
  annotations:
    openshift.io/description: 'loki'
    openshift.io/display-name: 'loki'
