manifests/loki/loki-service.yml
kind: Service
apiVersion: v1
metadata:
  name: loki
  namespace: loki
  labels:
    app: loki
spec:
  ports:
    - name: http-metrics
      protocol: TCP
      port: 3100
  selector:
    app: loki
  type: ClusterIP
  sessionAffinity: None
